// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hidden Pure component match expected snapshot 1`] = `
<div
  className=" "
>
  <div>
    hidden content
  </div>
</div>
`;

exports[`Hidden Pure component with xs="down" md="exact" xl="up" match expected snapshot 1`] = `
<div
  className=" hidden-down-xs-0-1 hidden-exact-md-0-8 hidden-up-xl-0-12 "
>
  <div>
    hidden content
  </div>
</div>
`;
